# registry-desktop

./: .gitignore  README.md  backup_database.bat  build.bat  build.py  init_db.bat  main.py  pyproject.toml  pyrightconfig.json  query_schema.py  registry-onefile.spec  registry.spec  restore_database.bat  session.pkl  tables.txt
.github/: copilot-instructions.md
base/: __init__.py  __version__.py  auto_update.py  browser.py  logging_config.py  menu_bar.py  runtime_config.py  splash_screen.py
base/auth/: __init__.py  access_denied_dialog.py  login_view.py  oauth_service.py  repository.py  session_manager.py  user_details_dialog.py
base/nav/: menu.json  navigation.py
base/status/: status_bar.py
base/widgets/: country_selection_dialog.py  date_picker.py  loading_panel.py  update_dialog.py
database/: __init__.py  backup.py  bootstrap.py  connection.py  models.py  restore.py
doc/updated-tables/: 001_changes.md  (+1 more)
navigation/: __init__.py  accordion_nav.py  menu.json
tests/: test_auto_update.py  test_catalog_scrapers.py  test_database_bootstrap.py  test_database_connection.py  test_database_restore.py  test_import_student.py  test_importer_dialog.py  test_importer_workers.py  test_module_scraper.py  test_structure_scraper.py  test_structure_sync_service.py  test_student_audit.py  test_student_fetch.py  test_student_import_cli.py  test_student_repository.py  test_student_scraper.py  test_upload_data.py
tools/: catalog_audit.py  student_audit.py  student_import.py  upload_data.py
utils/: formatters.py  grades.py  modules.py  normalizers.py  permissions.py
(+96 files in other folders)
