[project]
name = "registry-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pyinstaller>=6.16.0",
    "wxpython>=4.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.44",
    "urllib3>=2.5.0",
    "libsql-client>=0.3.1",
    "sqlalchemy-libsql>=0.1.0"
]
