[project]
name = "registry-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "nanoid>=2.0.0",
    "pyinstaller>=6.16.0",
    "wxpython>=4.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.44",
    "urllib3>=2.5.0",
    "psycopg2-binary>=2.9.0",
    "google-auth-oauthlib>=1.2.3",
    "google-auth-httplib2>=0.2.1",
]
