[project]
name = "registry-desktop"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pyinstaller>=6.19.0",
    "wxpython>=4.2.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "sqlalchemy>=2.0.48",
    "urllib3>=2.6.3",
    "psycopg2-binary>=2.9.0",
    "tomli>=2.4.0",
    "pyright>=1.1.408",
]
